Fixing hamburger button on iPhone.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,8 +64,6 @@ header {
   width: 31px;
   height: 21px;
   appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
   background-color: transparent;
   border: none;
 }
